2007-07-24  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am (INCLUDES): Remove the *_DISABLE_DEPRECATED
	lines. They are evil in release code. In this case they the build
	with recent GTK 2.11.x. See bug #459720.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_MixerApplet.xml: Use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456944

	* applet.c: (gnome_volume_applet_init),
	(gnome_volume_applet_refresh), (cb_verb):
	* applet.h:
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #456944

2007-07-02  Jordi Mas <jmas@softcatala.org>

	* docs/Makefile.am:
	* docs/ca/ca.po: added Catalan translation by Gil Forcada

2007-02-17  David Lodge <dave@cirt.net>

	* docs/en_GB/en_GB.po: Added (British) English translation.
	* docs/Makefile.am: Added en_GB to DOC_LINGUAS

2007-02-10  AP Singh Alam <aalam@users.sf.net>

	* docs/pa/pa.po: Punjabi is added
	* docs/Makefile.am: pa is added

2007-01-27  Timur Salikhov <Tima-S@yandex.ru>

	* docs/Makefile.am:
	* docs/ru/ru.po: added Russian translation

2007-01-08  Ray Strode  <rstrode@redhat.com>

	* load.c: (gnome_volume_applet_factory): 
	(gnome_volume_applet_toplevel_configure_handler):
	defer initialization of gstreamer until
	after the applet has fully registered with 
	the panel (bug 385305).

2006-11-16  Kjartan Maraas  <kmaraas@gnome.org>

	* applet.c: Also use left/right key to change volume.
	Patch from Jerry Tan. Closes bug 353644.

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/mixer_applet2.xml: Fix build.

2006-11-08  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	
2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* applet.c:
	* applet.c:
	- icon related cleanups
	- fix icon resizing
	Patches from Matthias Clasen

2006-09-04  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.