@@ -1,3 +1,10 @@
+2007-09-20  Bastien Nocera  <hadess@hadess.net>
+
+	* preferences.c: (gnome_volume_applet_preferences_init),
+	(gnome_volume_applet_preferences_change): Ellipsise the
+	device list, otherwise long (really long) device names
+	make it go bananas
+
 2007-07-24  Callum McKenzie  <callum@spooky-possum.org>
 
 	* Makefile.am (INCLUDES): Remove the *_DISABLE_DEPRECATED
